pictures folder added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" href="simple logo white.png">
+    <link rel="icon" href="pictures/simple logo white.png">
 </head>
 <body>
     <main class="all" id="all">
